Novos ajustes de alyout e nova tela para cadastro de pessoas